# nikon-framer

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: main.js  package-lock.json  package.json  styles.css  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: debug.rs  error.rs  lib.rs  main.rs  metadata.rs  models.rs  resources.rs  setup.rs  state.rs  utils.rs
src-tauri/src/batch/: pipeline.rs
src-tauri/src/commands/: batch.rs  common.rs  mod.rs
src-tauri/src/graphics/: effects.rs  mod.rs  shadow.rs  shapes.rs  text.rs
src-tauri/src/parser/: impls.rs  mod.rs  models.rs  traits.rs
src-tauri/src/processor/: blur.rs  master.rs  mod.rs  polaroid.rs  signature.rs  traits.rs  transparent_classic.rs  transparent_master.rs  white.rs  white_classic.rs  white_master.rs  white_modern.rs  white_polaroid.rs
src-tauri/src/processor/white/: mod.rs  utils.rs  white_classic_v2.rs  white_master_v2.rs  white_modern_v2.rs  white_polaroid_v2.rs
src-tauri/src/resources/: brand.rs  brand_logos.rs  fonts.rs  mod.rs
src/js/: commands.js  elements.js  fonts.js  preview.js  state.js  ui.js
src/src/: App.vue  main.js  store.js
src/src/assets/css/: styles.css
src/src/components/: ControlPanel.vue  DebugTools.vue  FileList.vue  PreviewModal.vue  StatusBar.vue
src/src/composables/: thumbnailManager.js  useBatchProcess.js  useGlobalEvents.js  usePreviewLogic.js
src/src/frames/: basic_frames.js  registry.js
src/src/store/: index.js
src/src/utils/: payloadHelper.js
(+15 files in other folders)
