[package]
name = "nikon-framer"
version = "2.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nikon_framer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev.package."*"]
opt-level = 3

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 新增下面这两行 ---
image = "0.25"   # 这是一个非常强大的 Rust 图片处理库
rexif = "0.7"    # 用于读取 Exif 元数据
tauri-plugin-dialog = "2"
kamadak-exif = "0.6.1"
base64 = "0.22.1"
imageproc = "0.25.0"
ab_glyph = "0.2.32"
once_cell = "1.18"
rayon = "1.10" # 请使用最新版本
log = "0.4"
tauri-plugin-log = "2.0" # 确保版本与你的 tauri 版本兼容
thiserror = "1.0"
